# gptsh

./: Cargo.toml
src/: main.rs
