[package]
name = "gptsh"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["derive"] }
colored = "2.0.0"
ctrlc = "3.2.5"
dialoguer = "0.10.3"
reqwest = { version = "0.11.15", features = ["blocking", "json"] }
serde_json = "1.0.94"
